# knu-back

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: auth.py  universities.py  users.py
app/core/: core.py
app/models/: models.py
app/schemas/: applications.py  base.py  schemas.py  universities.py  users.py
app/services/: auth.py  university.py  user.py
